--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,17 +11,22 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@supabase/supabase-js": "^2.90.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.31",
     "expo-constants": "^18.0.13",
     "expo-linking": "^8.0.11",
     "expo-router": "^6.0.21",
     "expo-status-bar": "~3.0.9",
+    "lucide-react-native": "^0.562.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.19.0",
+    "react-native-svg": "15.12.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.19"
   },
   "devDependencies": {
