feat: implement task recurrence, assignees and mobile auth improvements
- Add recurrence_day and recurrence_time fields to tasks for better scheduling
- Implement assignees support for tasks with proper family validation
- Enhance create-task-instances function to handle new recurrence logic
- Improve mobile authentication flow with QR code scanning for family invites
- Add camera permissions and QR scanning for family code entry
- Update mobile UI for statement screen with transaction history
- Fix auth provider auto-correction for missing profiles
- Add proper error handling for JWT expiration in mobile auth
- Update dependencies including supabase client and expo-camera

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -6,7 +6,7 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
+    "scheme": "mesadaonline",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
@@ -25,6 +25,14 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera to scan QR codes."
+        }
+      ]
+    ]
   }
 }
