--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,6 +17,7 @@
     "expo-camera": "~17.0.10",
     "expo-constants": "^18.0.13",
     "expo-crypto": "~15.0.8",
+    "expo-image-picker": "~17.0.10",
     "expo-linking": "^8.0.11",
     "expo-router": "^6.0.21",
     "expo-status-bar": "~3.0.9",
@@ -25,13 +26,14 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-css-interop": "^0.2.1",
     "react-native-qrcode-svg": "^6.3.21",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-web": "0.21.0",
-    "react-native-worklets": "^0.7.1",
+    "react-native-worklets": "^0.5.1",
     "react-native-worklets-core": "^1.6.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.19"
