--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -7,7 +7,8 @@
       "@/*": [
         "./src/*"
       ]
-    }
+    },
+    "jsxImportSource": "nativewind"
   },
   "include": [
     "**/*.ts",
