feat(eas): add EAS configuration and update mobile app settings
- Add EAS configuration files for both root and mobile directories
- Update mobile package.json to specify npm version
- Configure Android package name and permissions for production build
- Fix null parameter handling in auth hook by removing unnecessary null values

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -13,15 +13,21 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.mesadaonline.app"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "package": "com.mesadaonline.app",
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -33,6 +39,11 @@
           "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera to scan QR codes."
         }
       ]
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "58b42320-f407-4390-986c-d9e21627abe9"
+      }
+    }
   }
 }
